--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Shah - WordPress Expert & DevOps Specialist | Community Builder</title>
-    <meta name="description" content="Aditya Shah - WordPress Expert, DevOps Specialist, and Community Builder. 10+ years WordPress experience, Hosting Support Lead at WPMU DEV, Founder of WordPress Bhopal & GDG Cloud Bhopal">
+    <title>Aditya Shah - WordPress Expert, DevOps Specialist, Community Builder | Official Site</title>
+    <meta name="description" content="Aditya Shah is a top-ranked WordPress Expert, DevOps Specialist, and Community Builder. Discover Aditya Shah's experience, speaking engagements, and community work. Hosting Support Lead at WPMU DEV, Founder of WordPress Bhopal & GDG Cloud Bhopal.">
+    <meta name="keywords" content="Aditya Shah, WordPress Expert, DevOps Specialist, Community Builder, WPMU DEV, WordPress Bhopal, GDG Cloud Bhopal, Speaker, Trainer, Hosting Support Lead, India, Tech Solutions">
+    <meta property="og:title" content="Aditya Shah - WordPress Expert, DevOps Specialist, Community Builder">
+    <meta property="og:description" content="Official website of Aditya Shah, WordPress Expert, DevOps Specialist, and Community Builder. Learn more about Aditya Shah's work, talks, and community projects.">
+    <meta property="og:image" content="https://2.gravatar.com/avatar/781518e3519e07fbdd10503b45b6d203f3fd92de8c9fffd58a4e099069cb3d79?size=256&d=initials">
+    <meta property="og:url" content="https://adityashah.dev/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Aditya Shah - WordPress Expert, DevOps Specialist, Community Builder">
+    <meta name="twitter:description" content="Official website of Aditya Shah, WordPress Expert, DevOps Specialist, and Community Builder. Learn more about Aditya Shah's work, talks, and community projects.">
+    <meta name="twitter:image" content="https://2.gravatar.com/avatar/781518e3519e07fbdd10503b45b6d203f3fd92de8c9fffd58a4e099069cb3d79?size=256&d=initials">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -13,7 +22,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="nav" id="nav">
+    <nav class="nav" id="nav" aria-label="Main Navigation">
         <div class="nav-container">
             <a href="#" class="nav-logo">
                 <span class="logo-text">AS</span>
@@ -37,19 +46,17 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-        <div class="hero-container">
+    <div class="hero-container" itemscope itemtype="https://schema.org/Person">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        Hi, I'm <span class="gradient-text">Aditya Shah</span>
+                        Hi, I'm <span class="gradient-text" itemprop="name">Aditya Shah</span>
                     </h1>
                     <p class="hero-subtitle">
                         I Specialize in Tech Solutions & DevOps
                     </p>
                     <p class="hero-description">
-                        With over a decade of experience in WordPress and 5+ years in DevOps, 
-                        I'm passionate about solving complex problems and helping others get the most out of their tools. 
-                        Community builder, speaker, and trainer empowering people through technology.
+                        With over a decade of experience in WordPress and 5+ years in DevOps, I, Aditya Shah, am passionate about solving complex problems and helping others get the most out of their tools. Community builder, speaker, and trainer empowering people through technology. Recognized as a top WordPress Expert and DevOps Specialist in India.
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View My Community Work</a>
@@ -112,18 +119,15 @@
 
     <!-- About Section -->
     <section class="about" id="about">
-        <div class="container">
+    <div class="container" itemscope itemtype="https://schema.org/Person">
             <div class="section-header">
                 <h2 class="section-title">About Me</h2>
-                <p class="section-subtitle">Get to know me better</p>
+                <p class="section-subtitle">Get to know Aditya Shah, WordPress Expert & DevOps Specialist</p>
             </div>
             <div class="about-content">
                 <div class="about-text">
                     <p class="about-description">
-                        My name is Aditya, and I absolutely love what I do! I'm passionate about tech, 
-                        training, and making things run smoothly. With over ten years of experience in WordPress 
-                        and around 5 years in DevOps and technical support, I love solving complex problems 
-                        and helping people get the most out of their tools and platforms.
+                        My name is Aditya Shah, and I absolutely love what I do! I'm passionate about tech, training, and making things run smoothly. With over ten years of experience in WordPress and around 5 years in DevOps and technical support, I love solving complex problems and helping people get the most out of their tools and platforms. If you're searching for "Aditya Shah WordPress Expert" or "Aditya Shah DevOps Specialist," you're in the right place.
                     </p>
                     <p class="about-description">
                         A huge WordPress fan, I started the WordPress community in Bhopal and truly believe 
@@ -150,10 +154,15 @@
                 <div class="about-image">
                     <div class="image-container">
                         <div class="image-placeholder">
-                            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="100" cy="100" r="80" fill="var(--primary-color)" opacity="0.1"/>
-                                <text x="100" y="120" text-anchor="middle" fill="var(--primary-color)" font-size="60">👨‍💻</text>
-                            </svg>
+                       <img src="https://2.gravatar.com/avatar/781518e3519e07fbdd10503b45b6d203f3fd92de8c9fffd58a4e099069cb3d79?size=256&d=initials"
+                           alt="Aditya Shah - WordPress Expert, DevOps Specialist, Community Builder profile photo"
+                           title="Aditya Shah - WordPress Expert, DevOps Specialist, Community Builder"
+                           style="width:160px;height:160px;border-radius:50%;object-fit:cover;background:var(--primary-color);opacity:0.95;aspect-ratio:1/1;box-shadow:0 2px 16px rgba(0,0,0,0.10);"
+                           loading="eager"
+                           decoding="async"
+                           itemprop="image"
+                           aria-label="Profile photo of Aditya Shah, WordPress Expert, DevOps Specialist, and Community Builder"
+                       />
                         </div>
                     </div>
                 </div>
@@ -538,10 +547,11 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
+    <footer class="footer" itemscope itemtype="https://schema.org/WPFooter">
+    <div class="container">
             <div class="footer-content">
                 <p>&copy; 2025 Aditya Shah. Made with ❤️ for the WordPress & DevOps community.</p>
-                <div class="footer-links">
+                <div class="footer-links" aria-label="Footer Navigation">
                     <a href="#home">Home</a>
                     <a href="#about">About</a>
                     <a href="#projects">Community</a>
