added blog and fixed footer

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨‍💻</text></svg>">
 </head>
 <body>
+    <a href="#main-content" class="skip-to-main">Skip to main content</a>
+    
     <!-- Navigation -->
     <nav class="nav" id="nav" aria-label="Main Navigation">
         <div class="nav-container">
@@ -34,6 +36,7 @@
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#speaking" class="nav-link">Speaking</a>
                 <a href="#companies" class="nav-link">Experience</a>
+                <a href="#blog" class="nav-link">Blog</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
@@ -45,6 +48,7 @@
     </nav>
 
     <!-- Hero Section -->
+    <main id="main-content">
     <section class="hero" id="home">
     <div class="hero-container" itemscope itemtype="https://schema.org/Person">
             <div class="hero-content">
@@ -489,6 +493,22 @@
         </div>
     </section>
 
+    <!-- Blog Section -->
+    <section class="blog" id="blog">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Latest Blog Posts</h2>
+                <p class="section-subtitle">Insights, tutorials, and updates from my tech journey</p>
+            </div>
+            <div id="blog-posts" class="blog-posts">
+                <div class="blog-loading">Loading latest posts...</div>
+            </div>
+            <div class="blog-link-container">
+                <a href="http://blog.adityashah.dev" class="btn btn-primary" target="_blank" rel="noopener">Visit Full Blog</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="container">
@@ -544,6 +564,7 @@
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -557,6 +578,7 @@
                     <a href="#projects">Community</a>
                     <a href="#speaking">Speaking</a>
                     <a href="#companies">Experience</a>
+                    <a href="#blog">Blog</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
