--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <a href="#speaking" class="nav-link">Speaking</a>
                 <a href="#companies" class="nav-link">Experience</a>
                 <a href="#blog" class="nav-link">Blog</a>
+                <a href="connect.html" class="nav-link">Connect</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
@@ -64,7 +65,7 @@
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View My Community Work</a>
-                        <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                        <a href="connect.html" class="btn btn-secondary">Connect with Me</a>
                     </div>
                 </div>
                 <div class="hero-visual">
@@ -579,6 +580,7 @@
                     <a href="#speaking">Speaking</a>
                     <a href="#companies">Experience</a>
                     <a href="#blog">Blog</a>
+                    <a href="connect.html">Connect</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
