--- a/connect/index.html
+++ b/connect/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="connect-styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨‍💻</text></svg>">
 </head>
 <body>
@@ -176,7 +176,7 @@
         <footer class="connect-footer">
             <p>&copy; 2025 Aditya Shah. Made with ❤️ for the WordPress & DevOps community.</p>
             <div class="footer-links">
-                <a href="index.html">← Back to Portfolio</a>
+                <a href="../index.html">← Back to Portfolio</a>
                 <a href="#" onclick="shareCurrentPage(); return false;">Share this page</a>
             </div>
         </footer>
@@ -191,6 +191,6 @@
         <div class="shape shape-5"></div>
     </div>
 
-    <script src="connect-script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
